--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@slidev/cli": "^0.37.1",
     "@slidev/theme-default": "^0.21.2",
     "echarts": "^5.5.1",
+    "leaflet": "^1.9.4",
     "slidev-theme-purplin": "^1.2.0"
   },
   "devDependencies": {
